tests/ui/use/use-mod/use-mod-4.stderr
error[E0429]: `self` imports are only allowed within a { } list
  --> $DIR/use-mod-4.rs:1:15
   |
LL | use crate::foo::self;
   |               ^^^^^^
   |
help: consider importing the module directly
   |
LL - use crate::foo::self;
LL + use crate::foo;
   |
help: alternatively, use the multi-path `use` syntax to import `self`
   |
LL | use crate::foo::{self};
   |                 +    +

error[E0429]: `self` imports are only allowed within a { } list
  --> $DIR/use-mod-4.rs:4:13
   |
LL | use std::mem::self;
   |             ^^^^^^
   |
help: consider importing the module directly
   |
LL - use std::mem::self;
LL + use std::mem;
   |
help: alternatively, use the multi-path `use` syntax to import `self`
   |
LL | use std::mem::{self};
   |               +    +

error[E0432]: unresolved import `crate::foo`
  --> $DIR/use-mod-4.rs:1:5
   |
LL | use crate::foo::self;
   |     ^^^^^^^^^^^^^^^^ no `foo` in the root

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0429, E0432.
For more information about an error, try `rustc --explain E0429`.
